# pre-commit-get

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  all-hooks.json  main.py  setup.cfg
pre_commit_get/: all_hooks.py  config.py  hook.py  main.py  schema.py
