[metadata]
name = pre-commit-get
version = 0.0.1
description = Manage your pre-commit hooks using an apt-like interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-rsha/pre-commit-get
author = Marsha White
license = MIT
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pyyaml>=6.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pre-commit-get = pre_commit_get.main:main

[bdist_wheel]
universal = True
